various update, including change code highlighting, change post theme, etc

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -12,8 +12,8 @@
 @import 'partials/content';
 @import 'partials/shortcodes';
 @import 'partials/table';
-@import 'partials/syntax';
 @import 'partials/links';
 @import 'partials/misc';
 @import 'partials/terms';
 @import 'partials/resume';
+@import 'partials/code';
