--- a/assets/styles/partials/_content.scss
+++ b/assets/styles/partials/_content.scss
@@ -108,8 +108,9 @@
   }
 
   & p {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding-left: 10px;
   }
 
   & blockquote {
