--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -309,8 +309,8 @@ html {
     }
 
     code {
-        background-color: #f0f0f0;
-        color: rgb(44, 44, 44);
+        background-color: #e6e4e4;
+        color: #272822;
     }
 
 }
