--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -170,7 +170,9 @@ html {
     }
 
     *.in-text-selection,
-    ::selection,
+    ::selection {
+        background-color: #CBDFF8;
+    }
     .CodeMirror-selected {
         background: var(--search-select-bg-color);
         color: var(--search-select-text-color) !important;
