--- a/assets/styles/partials/_code.scss
+++ b/assets/styles/partials/_code.scss
@@ -1,57 +1,57 @@
-/* Background */ .chroma { color: #272822; background-color: #e6e4e4}
+/* Background */ .chroma { color: #272822; background-color: #f6f6f6}
 /* Error  .chroma .err { color: #960050; background-color: #1e0010 }*/
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
 /* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; width: auto; overflow: auto; display: block; }
 /* LineHighlight */ .chroma .hl { display: block; width: 100%;background-color: #ffffcc }
 /* LineNumbersTable */ .chroma .lnt { margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
 /* LineNumbers */ .chroma .ln { margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
-/* Keyword */ .chroma .k { color: #007020; font-weight: bold }
-/* KeywordConstant */ .chroma .kc { color: #007020; font-weight: bold }
-/* KeywordDeclaration */ .chroma .kd { color: #007020; font-weight: bold }
-/* KeywordNamespace */ .chroma .kn { color: #007020; font-weight: bold }
-/* KeywordPseudo */ .chroma .kp { color: #007020 }
-/* KeywordReserved */ .chroma .kr { color: #007020; font-weight: bold }
-/* KeywordType */ .chroma .kt { color: #902000 }
-/* NameAttribute */ .chroma .na { color: #4070a0 }
-/* NameBuiltin */ .chroma .nb { color: #007020 }
-/* NameClass */ .chroma .nc { color: #0e84b5; font-weight: bold }
-/* NameConstant */ .chroma .no { color: #60add5 }
-/* NameDecorator */ .chroma .nd { color: #555555; font-weight: bold }
-/* NameEntity */ .chroma .ni { color: #d55537; font-weight: bold }
-/* NameException */ .chroma .ne { color: #007020 }
-/* NameFunction */ .chroma .nf { color: #06287e }
-/* NameLabel */ .chroma .nl { color: #002070; font-weight: bold }
-/* NameNamespace */ .chroma .nn { color: #0e84b5; font-weight: bold }
-/* NameTag */ .chroma .nt { color: #062873; font-weight: bold }
-/* NameVariable */ .chroma .nv { color: #bb60d5 }
-/* LiteralString */ .chroma .s { color: #4070a0 }
-/* LiteralStringAffix */ .chroma .sa { color: #4070a0 }
-/* LiteralStringBacktick */ .chroma .sb { color: #4070a0 }
-/* LiteralStringChar */ .chroma .sc { color: #4070a0 }
-/* LiteralStringDelimiter */ .chroma .dl { color: #4070a0 }
-/* LiteralStringDoc */ .chroma .sd { color: #4070a0; font-style: italic }
-/* LiteralStringDouble */ .chroma .s2 { color: #4070a0 }
-/* LiteralStringEscape */ .chroma .se { color: #4070a0; font-weight: bold }
-/* LiteralStringHeredoc */ .chroma .sh { color: #4070a0 }
-/* LiteralStringInterpol */ .chroma .si { color: #70a0d0; font-style: italic }
-/* LiteralStringOther */ .chroma .sx { color: #c65d09 }
-/* LiteralStringRegex */ .chroma .sr { color: #235388 }
-/* LiteralStringSingle */ .chroma .s1 { color: #4070a0 }
+/* Keyword */ .chroma .k { color: #2973b7; }
+/* KeywordConstant */ .chroma .kc { color: #57ac57; }
+/* KeywordDeclaration */ .chroma .kd { color: #2973b7; }
+/* KeywordNamespace */ .chroma .kn { color: #2973b7; }
+/* KeywordPseudo */ .chroma .kp { color: #2973b7 }
+/* KeywordReserved */ .chroma .kr { color: #2973b7; }
+/* KeywordType */ .chroma .kt { color: #e96900 }
+/* NameAttribute */ .chroma .na { color: #2973b7 }
+/* NameBuiltin */ .chroma .nb { color: #2973b7 }
+/* NameClass */ .chroma .nc { color: #2973b7; font-weight: bold }
+/* NameConstant */ .chroma .no { color: #2973b7 }
+/* NameDecorator */ .chroma .nd { color: #2973b7; font-weight: bold }
+/* NameEntity */ .chroma .ni { color: #2973b7; font-weight: bold }
+/* NameException */ .chroma .ne { color: #2973b7 }
+/* NameFunction */ .chroma .nf { color: #2973b7 }
+/* NameLabel */ .chroma .nl { color: #2973b7; font-weight: bold }
+/* NameNamespace */ .chroma .nn { color: #2973b7; font-weight: bold }
+/* NameTag */ .chroma .nt { color: #2973b7; font-weight: bold }
+/* NameVariable */ .chroma .nv { color: #2973b7 }
+/* LiteralString */ .chroma .s { color: #517918 }
+/* LiteralStringAffix */ .chroma .sa { color: #517918 }
+/* LiteralStringBacktick */ .chroma .sb { color: #517918 }
+/* LiteralStringChar */ .chroma .sc { color: #57ac57 }
+/* LiteralStringDelimiter */ .chroma .dl { color: #57ac57 }
+/* LiteralStringDoc */ .chroma .sd { color: #517918; font-style: italic }
+/* LiteralStringDouble */ .chroma .s2 { color: #57ac57 }
+/* LiteralStringEscape */ .chroma .se { color: #57ac57; font-weight: bold }
+/* LiteralStringHeredoc */ .chroma .sh { color: #57ac57 }
+/* LiteralStringInterpol */ .chroma .si { color: #57ac57; font-style: italic }
+/* LiteralStringOther */ .chroma .sx { color: #517918 }
+/* LiteralStringRegex */ .chroma .sr { color: #57ac57 }
+/* LiteralStringSingle */ .chroma .s1 { color: #57ac57 }
 /* LiteralStringSymbol */ .chroma .ss { color: #517918 }
-/* LiteralNumber */ .chroma .m { color: #40a070 }
-/* LiteralNumberBin */ .chroma .mb { color: #40a070 }
-/* LiteralNumberFloat */ .chroma .mf { color: #40a070 }
-/* LiteralNumberHex */ .chroma .mh { color: #40a070 }
-/* LiteralNumberInteger */ .chroma .mi { color: #40a070 }
-/* LiteralNumberIntegerLong */ .chroma .il { color: #40a070 }
-/* LiteralNumberOct */ .chroma .mo { color: #40a070 }
+/* LiteralNumber */ .chroma .m { color: #57ac57 }
+/* LiteralNumberBin */ .chroma .mb { color: #57ac57 }
+/* LiteralNumberFloat */ .chroma .mf { color: #57ac57 }
+/* LiteralNumberHex */ .chroma .mh { color: #57ac57 }
+/* LiteralNumberInteger */ .chroma .mi { color: #57ac57 }
+/* LiteralNumberIntegerLong */ .chroma .il { color: #57ac57 }
+/* LiteralNumberOct */ .chroma .mo { color: #57ac57 }
 /* Operator */ .chroma .o { color: #666666 }
 /* OperatorWord */ .chroma .ow { color: #007020; font-weight: bold }
-/* Comment */ .chroma .c { color: #60a0b0; font-style: italic }
-/* CommentHashbang */ .chroma .ch { color: #60a0b0; font-style: italic }
-/* CommentMultiline */ .chroma .cm { color: #60a0b0; font-style: italic }
-/* CommentSingle */ .chroma .c1 { color: #60a0b0; font-style: italic }
-/* CommentSpecial */ .chroma .cs { color: #60a0b0; background-color: #fff0f0 }
+/* Comment */ .chroma .c { color: #999999; font-style: italic }
+/* CommentHashbang */ .chroma .ch { color: #999999; font-style: italic }
+/* CommentMultiline */ .chroma .cm { color: #999999; font-style: italic }
+/* CommentSingle */ .chroma .c1 { color: #999999; font-style: italic }
+/* CommentSpecial */ .chroma .cs { color: #999999; background-color: #fff0f0 }
 /* CommentPreproc */ .chroma .cp { color: #007020 }
 /* CommentPreprocFile */ .chroma .cpf { color: #007020 }
 /* GenericDeleted */ .chroma .gd { color: #a00000 }
@@ -66,3 +66,4 @@
 /* GenericTraceback */ .chroma .gt { color: #0044dd }
 /* GenericUnderline */ .chroma .gl { text-decoration: underline }
 /* TextWhitespace */ .chroma .w { color: #bbbbbb }
+.chroma .text {color: #663342;}
