--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
   {{ partial "header.html" . }}
+       {{ if .Site.Params.googlefonts }}
+         <link rel="stylesheet" href="{{ .Site.Params.googlefonts }}" type="text/css" media="all" />
+     {{ end }}
   <section class="main post-detail">
     <header class="post-header">
       <h1 class="post-title">{{ .Title }}</h1>
